
#pragma once
/********************************************/
//
//              CopyRight Moatasem
//
/********************************************/
/*
author : Moatasem
date :Sat Jan 25 08:15:21 PM CET 2025
brief:
*/

namespace sp {
enum Floors { FIRST, SECOND, NUM_FLOORS };
enum class Actions {
  PARK_FIRST,
  PARK_SECOND,
  UNPARK_FIRST,
  UNPARK_SECOND,
  NONE
};

} // namespace sp
